--- a/CodeshopWarehouse.Web/Views/Orders/Create.cshtml
+++ b/CodeshopWarehouse.Web/Views/Orders/Create.cshtml
@@ -1,17 +1,10 @@
 ﻿@model CodeshopWarehouse.Entities.Order
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Create";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
+<h2>Create</h2>
 
 <h4>Order</h4>
 <hr />
@@ -30,16 +23,6 @@
                 <span asp-validation-for="ProductQuantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateProcessed" class="control-label"></label>
-                <input asp-for="DateProcessed" class="form-control" />
-                <span asp-validation-for="DateProcessed" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
@@ -53,5 +36,3 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
