--- a/CodeshopWarehouse.Web/Views/Orders/Delete.cshtml
+++ b/CodeshopWarehouse.Web/Views/Orders/Delete.cshtml
@@ -1,18 +1,12 @@
 ﻿@model CodeshopWarehouse.Entities.Order
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Delete";
 }
 
-<!DOCTYPE html>
+<h2>Delete</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Order</h4>
     <hr />
@@ -42,10 +36,10 @@
             @Html.DisplayFor(model => model.DateCreated)
         </dd>
     </dl>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-</body>
-</html>
