--- a/CodeshopWarehouse.Web/Views/Orders/Details.cshtml
+++ b/CodeshopWarehouse.Web/Views/Orders/Details.cshtml
@@ -1,19 +1,11 @@
 ﻿@model CodeshopWarehouse.Entities.Order
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Details";
 }
 
-<!DOCTYPE html>
+<h2>Details</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Order</h4>
     <hr />
@@ -43,12 +35,8 @@
             @Html.DisplayFor(model => model.DateCreated)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
-</body>
-</html>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
+</div>
