--- a/CodeshopWarehouse.Web/Views/Orders/Edit.cshtml
+++ b/CodeshopWarehouse.Web/Views/Orders/Edit.cshtml
@@ -1,17 +1,10 @@
 ﻿@model CodeshopWarehouse.Entities.Order
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
+<h2>Edit</h2>
 
 <h4>Order</h4>
 <hr />
@@ -54,5 +47,3 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
